bk_ida/gccida/g2/verify_tree
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1485:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v7; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1488:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1489:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1493:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1494:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1495:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *attributes; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1499:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1500:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1509:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1513:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1517:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1533:1: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // r15 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1533:36: error: use of undeclared identifier 'p_int_cst'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // r15 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1535:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v57; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1543:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v65; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1902:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = &writer->int_cst.int_cst; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1906:20: error: expected expression
v57 = ( tree_node *)p_int_cst->low; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1906:9: error: use of undeclared identifier 'tree_node'
v57 = ( tree_node *)p_int_cst->low; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/c-common.c:1926:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/verify_tree/src/obj/c-common.o] Error 1
